# financas-automatizadas

./: .env.example  .gitignore  Makefile  Pipfile  README.md  TODO.md  my-pytest.ini  pyproject.toml  pytest.ini
.github/workflows/: sync-nubank-to-ynab.yml
financas_automatizadas/: main.py  nubank.py  ynab.py
spikes/: nubank.py  transaction_creation_response.py  ynab.py
tests/: test_main.py  test_nubank.py  test_ynab.py
