[tool.poetry]
name = "financas-automatizadas"
version = "0.1.0"
description = "\"Automatizando o envio das minhas transações para o YNAB\""
authors = ["FeliPython <felipejpa15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-decouple = "^3.8"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
pynubank = "^2.25.0"
ynab-sdk = "^0.5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.13"
ipdb = "^0.13.13"
freezegun = "^1.4.0"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_tests.py"]
addopts = "-vv --cov=financas_automatizadas --durations=5 --disable-warnings"
testpaths = ["tests"]
console_output_style = "progress"
